Fase 1: Ingreso total por cada tienda

--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -920,13 +920,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "X62IW3KFUIYm"
@@ -938,21 +931,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "xykobSftV64I"
       },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "KDyr8E71V3m-"
-      },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Ingresos Tienda 1: $1,150,880,400.00\n",
+            "Ingresos Tienda 2: $1,116,343,500.00\n",
+            "Ingresos Tienda 3: $1,098,019,600.00\n",
+            "Ingresos Tienda 4: $1,038,375,700.00\n"
+          ]
+        }
+      ],
+      "source": [
+        "ingresos_tienda = tienda['Precio'].sum()\n",
+        "ingresos_tienda2 = tienda2['Precio'].sum()\n",
+        "ingresos_tienda3 = tienda3['Precio'].sum()\n",
+        "ingresos_tienda4 = tienda4['Precio'].sum()\n",
+        "print(f\"Ingresos Tienda 1: ${ingresos_tienda:,.2f}\")\n",
+        "print(f\"Ingresos Tienda 2: ${ingresos_tienda2:,.2f}\")\n",
+        "print(f\"Ingresos Tienda 3: ${ingresos_tienda3:,.2f}\")\n",
+        "print(f\"Ingresos Tienda 4: ${ingresos_tienda4:,.2f}\")"
+      ]
     },
     {
       "cell_type": "markdown",
