Fase 2: Ventas por categoría

--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -969,21 +969,123 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "metadata": {
         "id": "A34YupIuYhfF"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Categoría del Producto\n",
+              "Muebles                    465\n",
+              "Electrónicos               448\n",
+              "Juguetes                   324\n",
+              "Electrodomésticos          312\n",
+              "Deportes y diversión       284\n",
+              "Instrumentos musicales     182\n",
+              "Libros                     173\n",
+              "Artículos para el hogar    171\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "execution_count": 47,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "tienda['Categoría del Producto'].value_counts().sort_values(ascending=False)"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "metadata": {
         "id": "yZR6cOjXYSk1"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Categoría del Producto\n",
+              "Muebles                    442\n",
+              "Electrónicos               422\n",
+              "Juguetes                   313\n",
+              "Electrodomésticos          305\n",
+              "Deportes y diversión       275\n",
+              "Instrumentos musicales     224\n",
+              "Libros                     197\n",
+              "Artículos para el hogar    181\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "execution_count": 49,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "tienda2['Categoría del Producto'].value_counts().sort_values(ascending=False)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 50,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Categoría del Producto\n",
+              "Muebles                    499\n",
+              "Electrónicos               451\n",
+              "Juguetes                   315\n",
+              "Electrodomésticos          278\n",
+              "Deportes y diversión       277\n",
+              "Libros                     185\n",
+              "Instrumentos musicales     177\n",
+              "Artículos para el hogar    177\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "execution_count": 50,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "tienda3['Categoría del Producto'].value_counts().sort_values(ascending=False)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 51,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Categoría del Producto\n",
+              "Muebles                    480\n",
+              "Electrónicos               451\n",
+              "Juguetes                   338\n",
+              "Deportes y diversión       277\n",
+              "Electrodomésticos          254\n",
+              "Artículos para el hogar    201\n",
+              "Libros                     187\n",
+              "Instrumentos musicales     170\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "execution_count": 51,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "tienda4['Categoría del Producto'].value_counts().sort_values(ascending=False)"
+      ]
     },
     {
       "cell_type": "markdown",
