--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -160,7 +160,7 @@
               "4               Nequi                   1   6.25184 -75.56359  "
             ]
           },
-          "execution_count": 1,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -190,7 +190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -211,7 +211,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -222,7 +222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -243,7 +243,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -254,7 +254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -275,7 +275,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -286,7 +286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -307,7 +307,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -318,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -353,7 +353,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -484,7 +484,7 @@
               "max      11.544440   -67.923900  "
             ]
           },
-          "execution_count": 5,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -495,7 +495,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -626,7 +626,7 @@
               "max      11.544440   -67.923900  "
             ]
           },
-          "execution_count": 7,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -637,7 +637,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -768,7 +768,7 @@
               "max      11.544440   -67.923900  "
             ]
           },
-          "execution_count": 8,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -779,7 +779,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -910,7 +910,7 @@
               "max      11.544440   -67.923900  "
             ]
           },
-          "execution_count": 9,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -931,7 +931,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 12,
       "metadata": {
         "id": "xykobSftV64I"
       },
@@ -969,7 +969,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 13,
       "metadata": {
         "id": "A34YupIuYhfF"
       },
@@ -989,7 +989,7 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 47,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1000,7 +1000,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 14,
       "metadata": {
         "id": "yZR6cOjXYSk1"
       },
@@ -1020,7 +1020,7 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 49,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1031,7 +1031,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -1049,7 +1049,7 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 50,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1060,7 +1060,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -1078,7 +1078,7 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 51,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1098,21 +1098,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
         "id": "bh3jjjJwY5MU"
       },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "I0KkjPoTY88F"
-      },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Satisfacción Tienda 1: 3.98\n",
+            "Satisfacción Tienda 2: 4.04\n",
+            "Satisfacción Tienda 3: 4.05\n",
+            "Satisfacción Tienda 4: 4.00\n"
+          ]
+        }
+      ],
+      "source": [
+        "satisfacción_tienda = tienda['Calificación'].mean()\n",
+        "satisfacción_tienda2 = tienda2['Calificación'].mean()\n",
+        "satisfacción_tienda3 = tienda3['Calificación'].mean()\n",
+        "satisfacción_tienda4 = tienda4['Calificación'].mean()\n",
+        "print(f\"Satisfacción Tienda 1: {satisfacción_tienda:.2f}\")\n",
+        "print(f\"Satisfacción Tienda 2: {satisfacción_tienda2:.2f}\")\n",
+        "print(f\"Satisfacción Tienda 3: {satisfacción_tienda3:.2f}\")\n",
+        "print(f\"Satisfacción Tienda 4: {satisfacción_tienda4:.2f}\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1128,15 +1139,6 @@
       "execution_count": null,
       "metadata": {
         "id": "qoyjqijQZHfF"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "0Sw3sd4IZIGW"
       },
       "outputs": [],
       "source": []
