--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -160,7 +160,7 @@
               "4               Nequi                   1   6.25184 -75.56359  "
             ]
           },
-          "execution_count": 2,
+          "execution_count": 1,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -186,6 +186,38 @@
       "metadata": {},
       "source": [
         "# 0. Preparación de los datos"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Producto                  0\n",
+              "Categoría del Producto    0\n",
+              "Precio                    0\n",
+              "Costo de envío            0\n",
+              "Fecha de Compra           0\n",
+              "Vendedor                  0\n",
+              "Lugar de Compra           0\n",
+              "Calificación              0\n",
+              "Método de pago            0\n",
+              "Cantidad de cuotas        0\n",
+              "lat                       0\n",
+              "lon                       0\n",
+              "dtype: int64"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "tienda.isnull().sum()"
       ]
     },
     {
@@ -217,7 +249,7 @@
         }
       ],
       "source": [
-        "tienda.isnull().sum()"
+        "tienda2.isnull().sum()\n"
       ]
     },
     {
@@ -249,7 +281,7 @@
         }
       ],
       "source": [
-        "tienda2.isnull().sum()\n"
+        "tienda3.isnull().sum()"
       ]
     },
     {
@@ -281,44 +313,12 @@
         }
       ],
       "source": [
-        "tienda3.isnull().sum()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "Producto                  0\n",
-              "Categoría del Producto    0\n",
-              "Precio                    0\n",
-              "Costo de envío            0\n",
-              "Fecha de Compra           0\n",
-              "Vendedor                  0\n",
-              "Lugar de Compra           0\n",
-              "Calificación              0\n",
-              "Método de pago            0\n",
-              "Cantidad de cuotas        0\n",
-              "lat                       0\n",
-              "lon                       0\n",
-              "dtype: int64"
-            ]
-          },
-          "execution_count": 6,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
         "tienda4.isnull().sum()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -353,7 +353,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -484,7 +484,7 @@
               "max      11.544440   -67.923900  "
             ]
           },
-          "execution_count": 8,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -495,7 +495,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -626,7 +626,7 @@
               "max      11.544440   -67.923900  "
             ]
           },
-          "execution_count": 9,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -637,7 +637,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -768,7 +768,7 @@
               "max      11.544440   -67.923900  "
             ]
           },
-          "execution_count": 10,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -779,7 +779,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -910,7 +910,7 @@
               "max      11.544440   -67.923900  "
             ]
           },
-          "execution_count": 11,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -931,7 +931,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {
         "id": "xykobSftV64I"
       },
@@ -969,7 +969,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 12,
       "metadata": {
         "id": "A34YupIuYhfF"
       },
@@ -989,7 +989,7 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1000,7 +1000,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 13,
       "metadata": {
         "id": "yZR6cOjXYSk1"
       },
@@ -1020,7 +1020,7 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1031,7 +1031,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -1049,7 +1049,7 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1060,7 +1060,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -1078,7 +1078,7 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1098,7 +1098,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 16,
       "metadata": {
         "id": "bh3jjjJwY5MU"
       },
@@ -1136,12 +1136,253 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "qoyjqijQZHfF"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "ventas_por_producto_tienda = tienda.Producto.value_counts()\n",
+        "ventas_por_producto_tienda2 = tienda2.Producto.value_counts()\n",
+        "ventas_por_producto_tienda3 = tienda3.Producto.value_counts()\n",
+        "ventas_por_producto_tienda4 = tienda4.Producto.value_counts()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {
+        "id": "0Sw3sd4IZIGW"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Productos más vendidos Tienda 1:\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "Producto\n",
+              "Microondas                 60\n",
+              "TV LED UHD 4K              60\n",
+              "Armario                    60\n",
+              "Secadora de ropa           58\n",
+              "Mesa de noche              56\n",
+              "Bloques de construcción    56\n",
+              "Balón de baloncesto        55\n",
+              "Bicicleta                  54\n",
+              "Vaso térmico               54\n",
+              "Refrigerador               54\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "execution_count": 18,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "print(\"Productos más vendidos Tienda 1:\")\n",
+        "ventas_por_producto_tienda.sort_values(ascending=False).head(10)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Productos menos vendidos Tienda 1:\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "Producto\n",
+              "Auriculares con micrófono      33\n",
+              "Celular ABXY                   33\n",
+              "Olla de presión                35\n",
+              "Pandereta                      36\n",
+              "Mochila                        39\n",
+              "Ciencia de datos con Python    39\n",
+              "Cuerda para saltar             40\n",
+              "Asistente virtual              40\n",
+              "Muñeca bebé                    40\n",
+              "Dinosaurio Rex                 40\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "execution_count": 19,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "print(\"Productos menos vendidos Tienda 1:\")\n",
+        "ventas_por_producto_tienda.sort_values(ascending=True).head(10)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Productos más vendidos Tienda 2:\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "Producto\n",
+              "Iniciando en programación    65\n",
+              "Microondas                   62\n",
+              "Batería                      61\n",
+              "Guitarra acústica            58\n",
+              "Pandereta                    58\n",
+              "Secadora de ropa             57\n",
+              "Iphone 15                    55\n",
+              "Bloques de construcción      54\n",
+              "Armario                      54\n",
+              "Set de ollas                 52\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "execution_count": 20,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "print(\"Productos más vendidos Tienda 2:\")\n",
+        "ventas_por_producto_tienda2.sort_values(ascending=False).head(10)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Productos menos vendidos Tienda 2:\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "Producto\n",
+              "Juego de mesa        32\n",
+              "Mesa de comedor      34\n",
+              "Impresora            34\n",
+              "Sillón               35\n",
+              "Auriculares          37\n",
+              "Asistente virtual    38\n",
+              "Cubertería           39\n",
+              "Smart TV             40\n",
+              "Celular ABXY         41\n",
+              "Estufa               42\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "execution_count": 21,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "print(\"Productos menos vendidos Tienda 2:\")\n",
+        "ventas_por_producto_tienda2.sort_values(ascending=True).head(10)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 22,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Productos más vendidos Tienda 3:\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "Producto\n",
+              "Kit de bancas                57\n",
+              "Mesa de comedor              56\n",
+              "Cama king                    56\n",
+              "Set de ollas                 55\n",
+              "Mesa de noche                55\n",
+              "Smart TV                     54\n",
+              "Estufa                       53\n",
+              "Cuerda para saltar           53\n",
+              "Modelado predictivo          53\n",
+              "Carrito de control remoto    52\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "execution_count": 22,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "print(\"Productos más vendidos Tienda 3:\")\n",
+        "ventas_por_producto_tienda3.sort_values(ascending=False).head(10)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Productos menos vendidos Tienda 3:\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "Producto\n",
+              "Bloques de construcción      35\n",
+              "Microondas                   36\n",
+              "Set de vasos                 36\n",
+              "Mochila                      36\n",
+              "Vaso térmico                 38\n",
+              "Guitarra eléctrica           38\n",
+              "Cubertería                   39\n",
+              "Auriculares con micrófono    39\n",
+              "Asistente virtual            39\n",
+              "Muñeca bebé                  39\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "execution_count": 23,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "print(\"Productos menos vendidos Tienda 3:\")\n",
+        "ventas_por_producto_tienda3.sort_values(ascending=True).head(10)"
+      ]
     },
     {
       "cell_type": "markdown",
