Fase 4: Se agregó la tienda 4 que faltaba

--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -1385,6 +1385,84 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Productos más vendidos Tienda 4:\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "Producto\n",
+              "Cama box                     62\n",
+              "Cubertería                   59\n",
+              "Dashboards con Power BI      56\n",
+              "Cama king                    56\n",
+              "Carrito de control remoto    55\n",
+              "Mesa de comedor              55\n",
+              "Mesa de noche                55\n",
+              "Smart TV                     54\n",
+              "Bloques de construcción      54\n",
+              "Pandereta                    52\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "execution_count": 26,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "print(\"Productos más vendidos Tienda 4:\")\n",
+        "ventas_por_producto_tienda4.sort_values(ascending=False).head(10)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Productos menos vendidos Tienda 4:\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "Producto\n",
+              "Guitarra eléctrica             33\n",
+              "Armario                        34\n",
+              "Guitarra acústica              37\n",
+              "Ciencia de datos con Python    38\n",
+              "Lavadora de ropa               38\n",
+              "Refrigerador                   38\n",
+              "Ajedrez de madera              39\n",
+              "Smartwatch                     39\n",
+              "Celular ABXY                   39\n",
+              "Secadora de ropa               40\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "execution_count": 27,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "print(\"Productos menos vendidos Tienda 4:\")\n",
+        "ventas_por_producto_tienda4.sort_values(ascending=True).head(10)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Fl0cGi3bZKqU"
@@ -1395,10 +1473,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "S2JeaCykZNy9"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Promedio Costo de Envío Tienda 1: $26,018.61\n",
+            "Promedio Costo de Envío Tienda 2: $25,216.24\n",
+            "Promedio Costo de Envío Tienda 3: $24,805.68\n",
+            "Promedio Costo de Envío Tienda 4: $23,459.46\n"
+          ]
+        }
+      ],
+      "source": [
+        "tienda1_promedio_envio = tienda['Costo de envío'].mean()\n",
+        "tienda2_promedio_envio = tienda2['Costo de envío'].mean()\n",
+        "tienda3_promedio_envio = tienda3['Costo de envío'].mean()\n",
+        "tienda4_promedio_envio = tienda4['Costo de envío'].mean()\n",
+        "print(f\"Promedio Costo de Envío Tienda 1: ${tienda1_promedio_envio:,.2f}\")\n",
+        "print(f\"Promedio Costo de Envío Tienda 2: ${tienda2_promedio_envio:,.2f}\")\n",
+        "print(f\"Promedio Costo de Envío Tienda 3: ${tienda3_promedio_envio:,.2f}\")\n",
+        "print(f\"Promedio Costo de Envío Tienda 4: ${tienda4_promedio_envio:,.2f}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": []
     },
