Resolución Final: Se agregaron gráficos

--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -1456,15 +1456,24 @@
       "source": [
         "Se realizó un análisis de las cuatro tiendas del Sr. Juan, teniendo en cuenta las métricas de facturación total, categorías más y menos populares, las evaluaciones recibidas de los clientes, los productos más y menos vendidos, y el costo de envió promedio para cada tienda. Después de la evaluación de estos puntos podemos afirmar que:\n",
         "\n",
-        "**Ingresos Totales**: La *tienda 1* representa el porcentaje mayor en las ventas de las cuatro tiendas con un *26.1%* del total de ventas. Mientras que del lado contrario la *tienda 4* es la que aporta un menor porcentaje a los ingresos totales con tan solo un *23.6%* del total de ventas.\n",
+        "**Ingresos Totales**: La *tienda 1* representa el porcentaje mayor en las ventas de las cuatro tiendas con un *26.1%* del total de ventas. Mientras que del lado contrario la *tienda 4* es la que aporta un menor porcentaje a los ingresos totales con tan solo un *23.6%* del total de ventas. \n",
+        "\n",
+        "![ingresos.png](imagenes/ingresos.png)\n",
         "\n",
         "**Categorías de productos más y menos vendidas**: Las categorías mas populares en las tiendas son las de *muebles* y *electrónicos*, con valores muy similares. Para estas categorías destaca especialmente la *tienda 3* que concentra el mayor volúmen de ventas para ambas, mientras que la *tienda 2* es la que presenta una menor cantidad de ventas para estas categorías. Por su parte, las categorías menos vendidas son las de *artículos para el hogar*, *libros* e *instrumentos musicales*.\n",
         "\n",
+        "![categorïas mas vendidas.png](imagenes/categorias%20mas%20vendidas.png)\n",
+        "![categorías menos vendidas.png](imagenes/categorias%20menos%20vendidas.png)\n",
+        "\n",
         "**Calificación promedio**: La calificación promedio para las tiendas es muy similar entre si, con una diferencia de tan solo *0.07* entre la mejor y la peor tienda en una escala del 0 al 5. En este apartado destaca la *tienda 3*, con una calificación promedio de *4.05*, mientras que la *tienda 1* presenta la calificación más baja con un *3.98*.\n",
+        "\n",
+        "![calificación promedio](imagenes/calificacion.png)\n",
         "\n",
         "**Productos más y menos vendidos**: Si bien, este rubro presenta la mayor variedad, podemos destacar al *microondas* como un producto que aparece entre los más vendidos en dos de las cuatro tiendas.\n",
         "\n",
         "**Costo promedio de envío**: El costo promedio de envío en todas las tiendas esta escalonado, destacando la *tienda 4* como la tienda con el envío promedio más bajo siendo de tan solo *$23,459.46*, mientras que la *tienda 1* presenta el costo de envío mas alto, costando en promedio *26,018.61* por envío. Sin embargo esto puede estar influenciado por el tipo de productos que son los más vendidos, ya que en la *tienda 1* los tres productos más vendidos son *muebles* o *electronicos*, mientras que en la *tienda 4* uno de los productos más vendidos es un libro.\n",
+        "\n",
+        "![Costo promedio de envío](imagenes/costo%20de%20envio.png)\n",
         "\n",
         "**Resolución final**\n",
         "Habiendo analizado las metricas se llego a la conclusión de que lo que supondría un mayor beneficio sería el **vender la tienda 4**, ya que en lo unico que destaca es en el menor costo de envió, cosa que como ya se comento podría estar influenciada por tener un libro como uno de sus productos más vendidos. La *tienda 4* es la que representa un menor porcentaje de los ingresos, que aunque tiene una calificación un poco mejor que la de la *tienda 1*, la tienda con mayor participación en los ingresos, esto no es lo suficientemente significativo comparado con la diferencia de ingresos."
